<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_tab3_main_engineer_fon"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextMainEngineerName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_person"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/main_engineer_name"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextMainEngineerVK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backInfoText"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/main_engineer_vk"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextMainEngineerCall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backInfoText"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/main_engineer_call"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextMainEngineerMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backInfoText"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/main_engineer_mail"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonMainEngineerVK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_vk"
            android:text="@string/open_vk" />

        <Button
            android:id="@+id/buttonMainEngineerCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_call"
            android:text="@string/call" />

        <Button
            android:id="@+id/buttonMainEngineerMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_mail"
            android:text="@string/mail" />

    </LinearLayout>

</LinearLayout>