<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_tab3_engineer_fon"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextEngineerName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_person"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/engineer_name"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextEngineerVK"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backInfoText"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/engineer_vk"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_tab3_vk" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextEngineerCall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backInfoText"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/engineer_call"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_tab3_call" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/infoTextEngineerMail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backInfoText"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center|bottom"
            android:text="@string/engineer_mail"
            android:textColor="@android:color/black"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:drawableStart="@drawable/ic_tab3_mail"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEngineerVK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_vk"
            android:text="@string/open_vk" />

        <Button
            android:id="@+id/buttonEngineerCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_call"
            android:text="@string/call" />

        <Button
            android:id="@+id/buttonEngineerMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_shape_button"
            android:drawableStart="@drawable/ic_tab3_mail"
            android:text="@string/mail" />

    </LinearLayout>

</LinearLayout>